# CppStateMachineFramework

./: README.md
code/: CMakeLists.txt
code/cmake/: CppStateMachineFrameworkConfig.cmake
code/inc/CppStateMachineFramework/: Event.hpp  HashFunctions.hpp  IState.hpp  StateMachine.hpp  StateMachineMethods.hpp
code/src/: Event.cpp  StateMachine.cpp
code/tests/: CMakeLists.txt
code/tests/unit/: CMakeLists.txt
code/tests/unit/Event/: CMakeLists.txt  testEvent.cpp
code/tests/unit/EventWithData/: CMakeLists.txt  testEventWithData.cpp
code/tests/unit/StateMachine/: CMakeLists.txt  testStateMachine.cpp
docs/: Design.md  Requirements.md
docs/Diagrams/: ClassDiagrams.plantuml  FlowCharts.plantuml
